{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 218,
  "lineage": "6a27389d-7ed3-8408-e586-7c4937a4800d",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "vm-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite_resources/providers/Microsoft.Network/networkInterfaces/elite-lab-nic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite_resources/providers/Microsoft.Network/publicIPAddresses/elite-lab-pip",
                "subnet_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elitegeneralnetwork/providers/Microsoft.Network/virtualNetworks/elitedev_vnet/subnets/application_subnet"
              }
            ],
            "location": "eastus2",
            "mac_address": "60-45-BD-AF-B5-DD",
            "name": "elite-lab-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "elite_resources",
            "virtual_machine_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite_resources/providers/Microsoft.Compute/virtualMachines/elite-linux-vm"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elitegeneralnetwork/providers/Microsoft.Network/networkSecurityGroups/elite_devnsg",
            "location": "eastus2",
            "name": "elite_devnsg",
            "resource_group_name": "elitegeneralnetwork",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 103,
                "protocol": "Tcp",
                "source_address_prefix": "47.185.227.216/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "65200-65535",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AppgwRule",
                "priority": 105,
                "protocol": "Tcp",
                "source_address_prefix": "GatewayManager",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTPS",
                "priority": 109,
                "protocol": "Tcp",
                "source_address_prefix": "47.185.227.216/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 104,
                "protocol": "Tcp",
                "source_address_prefix": "47.185.227.216/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elitegeneralnetwork/providers/Microsoft.Network/routeTables/elite_rtb",
            "location": "eastus2",
            "name": "elite_rtb",
            "resource_group_name": "elitegeneralnetwork",
            "route": [
              {
                "address_prefix": "10.0.0.0/16",
                "name": "route1",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              }
            ],
            "subnets": [
              "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elitegeneralnetwork/providers/Microsoft.Network/virtualNetworks/elitedev_vnet/subnets/application_subnet",
              "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elitegeneralnetwork/providers/Microsoft.Network/virtualNetworks/elitedev_vnet/subnets/database_subnet",
              "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elitegeneralnetwork/providers/Microsoft.Network/virtualNetworks/elitedev_vnet/subnets/elite-backend-subnet",
              "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elitegeneralnetwork/providers/Microsoft.Network/virtualNetworks/elitedev_vnet/subnets/elite-frontend-subnet"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "ac0d5efb-777f-4395-b024-886934320db4",
            "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elitegeneralnetwork/providers/Microsoft.Network/virtualNetworks/elitedev_vnet",
            "location": "eastus2",
            "name": "elitedev_vnet",
            "resource_group_name": "elitegeneralnetwork",
            "subnets": [
              "application_subnet",
              "database_subnet",
              "elite-backend-subnet",
              "elite-frontend-subnet"
            ],
            "tags": {
              "ManagedWith": "terraform",
              "Owner": "elitesolutionsit",
              "Service": "devOps",
              "environment": "Development"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway/backendAddressPools/elitedev_vnet-beap",
                "ip_addresses": [],
                "name": "elitedev_vnet-beap"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway/backendHttpSettingsCollection/elitedev_vnet-be-htst",
                "name": "elitedev_vnet-be-htst",
                "path": "/",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": null,
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway/frontendIPConfigurations/elitedev_vnet-feip",
                "name": "elitedev_vnet-feip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/publicIPAddresses/elite-appgw-pip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway/frontendPorts/elitedev_vnet-feport",
                "name": "elitedev_vnet-feport",
                "port": 80
              },
              {
                "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway/frontendPorts/elitedev_vnet_443",
                "name": "elitedev_vnet_443",
                "port": 443
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway/gatewayIPConfigurations/elite-ipconf",
                "name": "elite-ipconf",
                "subnet_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elitegeneralnetwork/providers/Microsoft.Network/virtualNetworks/elitedev_vnet/subnets/elite-frontend-subnet"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway/frontendIPConfigurations/elitedev_vnet-feip",
                "frontend_ip_configuration_name": "elitedev_vnet-feip",
                "frontend_port_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway/frontendPorts/elitedev_vnet-feport",
                "frontend_port_name": "elitedev_vnet-feport",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway/httpListeners/elitedev_vnet-httplstn",
                "name": "elitedev_vnet-httplstn",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              },
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway/frontendIPConfigurations/elitedev_vnet-feip",
                "frontend_ip_configuration_name": "elitedev_vnet-feip",
                "frontend_port_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway/frontendPorts/elitedev_vnet_443",
                "frontend_port_name": "elitedev_vnet_443",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway/httpListeners/elitedev_vnet-httpslstn",
                "name": "elitedev_vnet-httpslstn",
                "protocol": "Https",
                "require_sni": false,
                "ssl_certificate_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway/sslCertificates/elitelabtoolsazure.link",
                "ssl_certificate_name": "elitelabtoolsazure.link",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway",
            "identity": [],
            "location": "eastus2",
            "name": "elite-devgateway",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [
              {
                "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway/redirectConfigurations/elitedev-rdrct",
                "include_path": false,
                "include_query_string": false,
                "name": "elitedev-rdrct",
                "redirect_type": "Permanent",
                "target_listener_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway/httpListeners/elitedev_vnet-httpslstn",
                "target_listener_name": "elitedev_vnet-httpslstn",
                "target_url": ""
              }
            ],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway/backendAddressPools/elitedev_vnet-beap",
                "backend_address_pool_name": "elitedev_vnet-beap",
                "backend_http_settings_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway/backendHttpSettingsCollection/elitedev_vnet-be-htst",
                "backend_http_settings_name": "elitedev_vnet-be-htst",
                "http_listener_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway/httpListeners/elitedev_vnet-httplstn",
                "http_listener_name": "elitedev_vnet-httplstn",
                "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway/requestRoutingRules/req-routehttps",
                "name": "req-routehttps",
                "priority": 11,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              },
              {
                "backend_address_pool_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway/backendAddressPools/elitedev_vnet-beap",
                "backend_address_pool_name": "elitedev_vnet-beap",
                "backend_http_settings_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway/backendHttpSettingsCollection/elitedev_vnet-be-htst",
                "backend_http_settings_name": "elitedev_vnet-be-htst",
                "http_listener_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway/httpListeners/elitedev_vnet-httpslstn",
                "http_listener_name": "elitedev_vnet-httpslstn",
                "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway/requestRoutingRules/elitedev_vnet-rqrt",
                "name": "elitedev_vnet-rqrt",
                "priority": 10,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "elite-appgw-dev",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "WAF_v2",
                "tier": "WAF_v2"
              }
            ],
            "ssl_certificate": [
              {
                "data": "MIIMmQIBAzCCDF8GCSqGSIb3DQEHAaCCDFAEggxMMIIMSDCCBv8GCSqGSIb3DQEHBqCCBvAwggbsAgEAMIIG5QYJKoZIhvcNAQcBMBwGCiqGSIb3DQEMAQYwDgQIG0g650QGSEICAggAgIIGuAVcG+nhGpW1jevfwjcswpNLeruCgRKQjk69pM2ZdCB1VaM9ODeRmDhuMFUYe7aEgZN7AUc2dxAljvgyE36dDdEKrrekNXgf9uBmfaaBKn7q/YspjevZUUneo6dcSU/cHkUklPxFt0XQRX2HC8QeeYZDVPaq2t1HQiaYi7i99o72EhAypp1XRlCeivV3qoSHe6ouvu1ap3aVAesEfkzZrO/jLoH7L20LUzSfYLB9kOiL5QtDLfQEIcudT5Y4729tGgoqdAC5tr3UsTrztHw1crXghfPC4ytMQhK9VNEF6HxHDPRe2gk+vK1FwX9ekLiSr3VXPAux0Zk [...]
                "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway/sslCertificates/elitelabtoolsazure.link",
                "key_vault_secret_id": "",
                "name": "elitelabtoolsazure.link",
                "password": "Arerepade12$",
                "public_cert_data": "MIIGgwYJKoZIhvcNAQcCoIIGdDCCBnACAQExADALBgkqhkiG9w0BBwGgggZYMIIGVDCCBTygAwIBAgIQYMdMvG5qiJ9XJ0JoA27uqTANBgkqhkiG9w0BAQsFADCBjzELMAkGA1UEBhMCR0IxGzAZBgNVBAgTEkdyZWF0ZXIgTWFuY2hlc3RlcjEQMA4GA1UEBxMHU2FsZm9yZDEYMBYGA1UEChMPU2VjdGlnbyBMaW1pdGVkMTcwNQYDVQQDEy5TZWN0aWdvIFJTQSBEb21haW4gVmFsaWRhdGlvbiBTZWN1cmUgU2VydmVyIENBMB4XDTIyMDcwMzAwMDAwMFoXDTIzMDcwMzIzNTk1OVowIjEgMB4GA1UEAxMXZWxpdGVsYWJ0b29sc2F6dXJlLmxpbmswggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQDK0EI+/Kgwq60 [...]
              }
            ],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {
              "ManagedWith": "terraform",
              "Owner": "elitesolutionsit",
              "Service": "devOps",
              "environment": "Development"
            },
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.appgw_rg",
            "azurerm_subnet.frontend",
            "data.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_application_gateway_backend_address_pool_association",
      "name": "beapassoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway/backendAddressPools/elitedev_vnet-beap",
            "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite_resources/providers/Microsoft.Network/networkInterfaces/elite-lab-nic/ipConfigurations/internal|/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/applicationGateways/elite-devgateway/backendAddressPools/elitedev_vnet-beap",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite_resources/providers/Microsoft.Network/networkInterfaces/elite-lab-nic"
          },
          "dependencies": [
            "azurerm_resource_group.appgw_rg",
            "azurerm_subnet.frontend",
            "data.azurerm_network_interface.vm-nic",
            "data.azurerm_resource_group.vnet_rg",
            "data.azurerm_virtual_network.vnet",
            "azurerm_application_gateway.network",
            "azurerm_public_ip.pip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite-appgw-dev/providers/Microsoft.Network/publicIPAddresses/elite-appgw-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.122.94.123",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "elite-appgw-pip",
            "resource_group_name": "elite-appgw-dev",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.appgw_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elitegeneralnetwork/providers/Microsoft.Network/virtualNetworks/elitedev_vnet/subnets/elite-backend-subnet",
            "name": "elite-backend-subnet",
            "resource_group_name": "elitegeneralnetwork",
            "virtual_network_name": "elitedev_vnet"
          },
          "dependencies": [
            "data.azurerm_resource_group.vnet_rg",
            "data.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elitegeneralnetwork/providers/Microsoft.Network/virtualNetworks/elitedev_vnet/subnets/elite-frontend-subnet",
            "name": "elite-frontend-subnet",
            "resource_group_name": "elitegeneralnetwork",
            "virtual_network_name": "elitedev_vnet"
          },
          "dependencies": [
            "data.azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.vnet_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "elite_devnsg_assoc_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elitegeneralnetwork/providers/Microsoft.Network/virtualNetworks/elitedev_vnet/subnets/elite-backend-subnet",
            "network_security_group_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elitegeneralnetwork/providers/Microsoft.Network/networkSecurityGroups/elite_devnsg",
            "subnet_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elitegeneralnetwork/providers/Microsoft.Network/virtualNetworks/elitedev_vnet/subnets/elite-backend-subnet"
          },
          "dependencies": [
            "azurerm_subnet.backend",
            "data.azurerm_network_security_group.nsg",
            "data.azurerm_resource_group.vnet_rg",
            "data.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "elite_devnsg_assoc_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elitegeneralnetwork/providers/Microsoft.Network/virtualNetworks/elitedev_vnet/subnets/elite-frontend-subnet",
            "network_security_group_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elitegeneralnetwork/providers/Microsoft.Network/networkSecurityGroups/elite_devnsg",
            "subnet_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elitegeneralnetwork/providers/Microsoft.Network/virtualNetworks/elitedev_vnet/subnets/elite-frontend-subnet"
          },
          "dependencies": [
            "data.azurerm_resource_group.vnet_rg",
            "data.azurerm_virtual_network.vnet",
            "azurerm_subnet.frontend",
            "data.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "appgw_assoc_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elitegeneralnetwork/providers/Microsoft.Network/virtualNetworks/elitedev_vnet/subnets/elite-backend-subnet",
            "route_table_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elitegeneralnetwork/providers/Microsoft.Network/routeTables/elite_rtb",
            "subnet_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elitegeneralnetwork/providers/Microsoft.Network/virtualNetworks/elitedev_vnet/subnets/elite-backend-subnet"
          },
          "dependencies": [
            "azurerm_subnet.backend",
            "data.azurerm_resource_group.vnet_rg",
            "data.azurerm_route_table.rtb",
            "data.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "appgw_assoc_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elitegeneralnetwork/providers/Microsoft.Network/virtualNetworks/elitedev_vnet/subnets/elite-frontend-subnet",
            "route_table_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elitegeneralnetwork/providers/Microsoft.Network/routeTables/elite_rtb",
            "subnet_id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elitegeneralnetwork/providers/Microsoft.Network/virtualNetworks/elitedev_vnet/subnets/elite-frontend-subnet"
          },
          "dependencies": [
            "azurerm_subnet.frontend",
            "data.azurerm_resource_group.vnet_rg",
            "data.azurerm_route_table.rtb",
            "data.azurerm_virtual_network.vnet"
          ]
        }
      ]
    }
  ]
}